--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ header {
     color: #fff;
     text-align: center;
     padding: 2rem 1rem;
+    position: fixed;          
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
 }
 
 nav ul {
@@ -66,6 +71,7 @@ nav ul li a:hover {
 }
 
 main {
+    margin-top: 120px;         /* adjust to your header's height */
     padding: 2rem;
 }
 
